--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="initial-scale=1.0, width=device-width" />
   <meta name="google-site-verification" content="fgtUlg7-TJ0rsW5leRP5TZ4iFohvZeDuSv9vWGFyxi8" />
   <meta name="description" content="ナップサック問題の動的計画法の可視化" />
