--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/dp-visualizer/favicon.ico"/><meta name="viewport" content="initial-scale=1,width=device-width"/><meta name="google-site-verification" content="fgtUlg7-TJ0rsW5leRP5TZ4iFohvZeDuSv9vWGFyxi8"/><meta name="description" content="ナップサック問題の動的計画法の可視化"/><meta property="og:title" content="DP Visualizer"/><meta property="og:site_name" content="DP Visualizer"/><meta property="og:url" content="https://yokotani92.github.io/dp-visualizer/"/><meta property="og:description" content="ナップサック問題の動的計画法の可視化"/><meta property="og:type" content="website"/><title>DP Visualizer</title></head><body><div id="root"></div><script>!function(e){function r(r){for(var n,i,l=r[0],a=r[1],p=r[2],c=0,s=[];c<l.length;c++)i=l[c],Object.prototype.hasOwnProperty.call(o,i)&&o[i]&&s.push(o[i][0]),o[i]=0;for(n in a)Object.prototype.hasOwnProperty.call(a,n)&&(e[n]=a[n]);for(f&&f(r);s.length;)s.shift()();return u.push.apply(u,p||[]),t()}function t(){for(var e,r=0;r<u.length;r++){for(var t=u[r],n=!0,l=1;l<t.length;l++){var a=t[l];0!==o[a]&&(n=!1)}n&&(u.splice(r--,1),e=i(i.s=t[0]))}return e}var n={},o={1:0},u=[];function i(r){if(n[r])return n[r].exports;var t=n[r]={i:r,l:!1,exports:{}};return e[r].call(t.exports,t,t.exports,i),t.l=!0,t.exports}i.m=e,i.c=n,i.d=function(e,r,t){i.o(e,r)||Object.defineProperty(e,r,{enumerable:!0,get:t})},i.r=function(e){"undefined"!=typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Symbol.toStringTag,{value:"Module"}),Object.defineProperty(e,"__esModule",{value:!0})},i.t=function(e,r){if(1&r&&(e=i(e)),8&r)return e;if(4&r&&"object"==typeof e&&e&&e.__esModule)return e;var t=Object.create(null);if(i.r(t),Object.defineProperty(t,"default",{enumerable:!0,value:e}),2&r&&"string"!=typeof e)for(var n in e)i.d(t,n,function(r){return e[r]}.bind(null,n));return t},i.n=function(e){var r=e&&e.__esModule?function(){return e.default}:function(){return e};return i.d(r,"a",r),r},i.o=function(e,r){return Object.prototype.hasOwnProperty.call(e,r)},i.p="/dp-visualizer/";var l=this["webpackJsonpdp-visualizer"]=this["webpackJsonpdp-visualizer"]||[],a=l.push.bind(l);l.push=r,l=l.slice();for(var p=0;p<l.length;p++)r(l[p]);var f=a;t()}([])</script><script src="/dp-visualizer/static/js/2.3e832c87.chunk.js"></script><script src="/dp-visualizer/static/js/main.c1a70c0f.chunk.js"></script></body></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite App</title>
+    <script type="module" crossorigin src="./assets/index.dbfce5e0.js"></script>
+    <link rel="modulepreload" href="./assets/vendor.6f7c83dd.js">
+  </head>
+  <body>
+    <div id="root"></div>
+    
+  </body>
+</html>
