--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="./assets/favicon.ef1b6ed3.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>DP Visualizer</title>
     <script type="module" crossorigin src="./assets/index.dbfce5e0.js"></script>
     <link rel="modulepreload" href="./assets/vendor.6f7c83dd.js">
   </head>
