deploy: ca003e57d116456e3354d5e27e5746e06af09df3

--- a/index.html
+++ b/index.html
@@ -4,6 +4,19 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./assets/favicon.ef1b6ed3.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="fgtUlg7-TJ0rsW5leRP5TZ4iFohvZeDuSv9vWGFyxi8" />
+    <meta name="description" content="ナップサック問題の動的計画法の可視化" />
+    <meta
+      property="og:title"
+      content="DP Visualizer"
+    />
+    <meta
+      property="og:site_name"
+      content="DP Visualizer"
+    />
+    <meta property="og:url" content="https://yokotani92.github.io/dp-visualizer/" />
+    <meta property="og:description" content="ナップサック問題の動的計画法の可視化" />  
+    <meta property="og:type" content="website" />
     <title>DP Visualizer</title>
     <script type="module" crossorigin src="./assets/index.dbfce5e0.js"></script>
     <link rel="modulepreload" href="./assets/vendor.6f7c83dd.js">
